# linux-sys-monitor

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build-termux.sh  config.example.toml  docker-compose.yml  install-termux.sh  install-windows.ps1  setup.sh
.cargo/: config.toml
.github/workflows/: release.yml
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/components/: AnimatedNumber.vue  ChartExport.vue  CollapsibleSection.vue  CpuChart.vue  DiskChart.vue  DiskList.vue  DraggableCard.vue  FullscreenChart.vue  GaugeChart.vue  HeatmapView.vue  HistoricalComparison.vue  KeyboardShortcuts.vue  MemoryChart.vue  NetworkChart.vue  NotificationBadge.vue  PresetSelector.vue  ProcessList.vue  QuickStatsBar.vue  RefreshRateSelector.vue  SearchFilter.vue  SettingsPanel.vue  SparklineChart.vue  StatusIndicator.vue  SystemOverview.vue  ThresholdColors.vue  ToastNotification.vue
frontend/src/composables/: useKeyboard.js  useNotificationBadge.js  useSettings.js  useTheme.js  useToast.js
frontend/src/styles/: main.css
installer/: Cargo.toml  README.md
installer-cpp/: CMakeLists.txt  Makefile
installer-cpp/obj-i686/: app.res
installer-cpp/src/: app.rc  install.cpp  install.h  main.cpp  resource.h  window.cpp  window.h
installer-gui/: Cargo.toml
installer-gui/.cargo/: config.toml
installer-gui/src/: main.rs
installer/src/: main.rs
release/: linux-system-monitor  linux-system-monitor-v2.1.0-linux-x86_64.tar.gz.bak  termux-monitor
release/frontend_dist/assets/: index-CEzbgaGd.css
release/v2.5.0/: install.sh  linux-system-monitor  uninstall.sh
release/v2.5.0/frontend/: index.html
release/v2.5.0/frontend/assets/: index-CsORhN9M.css  index-tmVQE5uy.js
release/v3.0.0/: install.sh  linux-system-monitor
release/v3.0.0/frontend/: index.html
release/v3.0.0/frontend/assets/: index-Cx3ks6vm.css  index-DnaHUF16.js
release/v4.0.0/: install.sh  linux-system-monitor
release/v4.0.0/frontend/assets/: index-DRhTaWEs.css
release/v4.2.0/: linux-system-monitor
release/v4.2.0/frontend/frontend_dist/assets/: index-DSa_prHZ.js
release/v5.0.0/: install.sh  linux-system-monitor
release/v5.0.0/frontend/: index.html
release/v5.0.0/frontend/assets/: index-BHXZ3xag.js
release/v5.0.0/frontend/frontend_dist/: index.html
src/: main.rs
src/api/: http.rs  mod.rs
src/cli/: alerts.rs  containers.rs  cpu.rs  disk.rs  gpu.rs  main.rs  memory.rs  network.rs  process.rs  services.rs  system_info.rs
src/metrics/: alerts.rs  analysis.rs  collector.rs  export.rs  mod.rs  ring_buffer.rs  scheduling.rs  storage.rs
src/termux/: main.rs
