[package]
name = "linux-system-monitor"
version = "2.5.0"
edition = "2021"
description = "Ultra-lightweight real-time system monitoring"
license = "MIT"

[features]
default = ["web"]
web = ["dep:axum", "dep:tower-http", "dep:tokio", "dep:tracing-subscriber"]
cli = ["dep:ctrlc", "dep:terminal_size"]
termux = ["dep:ctrlc", "dep:terminal_size", "dep:serde_json"]

[dependencies]
tokio = { version = "1.35", features = ["rt-multi-thread", "time", "sync", "macros"], optional = true }
axum = { version = "0.7", features = ["ws"], optional = true }
tower-http = { version = "0.5", features = ["cors"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
sysinfo = { version = "0.30", default-features = false, features = ["serde"] }
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
futures-util = "0.3"
ctrlc = { version = "3.2", optional = true }
terminal_size = { version = "0.3", optional = true }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = false

[[bin]]
name = "linux-system-monitor"
path = "src/main.rs"
required-features = ["web"]

[[bin]]
name = "cli"
path = "src/cli/main.rs"
required-features = ["cli"]

[[bin]]
name = "termux-monitor"
path = "src/termux/main.rs"
required-features = ["termux"]
