[package]
name = "linux-system-monitor"
version = "5.0.0"
edition = "2021"
description = "Ultra-lightweight real-time system monitoring"
license = "MIT"

[features]
default = []
web = ["dep:axum", "dep:tower-http", "dep:tokio", "dep:tracing-subscriber", "dep:reqwest", "dep:csv", "dep:zip", "dep:flate2", "dep:regex", "dep:tokio-cron-scheduler", "dep:base64", "dep:tracing", "dep:chrono"]
cli = ["dep:ctrlc", "dep:terminal_size", "dep:serde", "dep:serde_json"]
termux = ["dep:ctrlc", "dep:terminal_size", "dep:serde", "dep:serde_json"]

[dependencies]
# 所有Termux和CLI需要的最小依赖
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
sysinfo = { version = "0.30", default-features = false, features = ["serde"] }
futures-util = "0.3"
ctrlc = { version = "3.2", optional = true }
terminal_size = { version = "0.3", optional = true }

# Web版本才需要的依赖（optional）
tokio = { version = "1.35", features = ["rt-multi-thread", "time", "sync", "macros"], optional = true }
axum = { version = "0.7", features = ["ws"], optional = true }
tower-http = { version = "0.5", features = ["cors"], optional = true }
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"], optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }

csv = { version = "1.3", optional = true }
zip = { version = "0.6", optional = true }
flate2 = { version = "1.0", optional = true }
regex = { version = "1.10", optional = true }
reqwest = { version = "0.11", features = ["json", "blocking"], optional = true }
tokio-cron-scheduler = { version = "0.10", optional = true }
base64 = { version = "0.21", optional = true }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = false

[[bin]]
name = "linux-system-monitor"
path = "src/main.rs"
required-features = ["web"]

[[bin]]
name = "cli"
path = "src/cli/main.rs"
required-features = ["cli"]

[[bin]]
name = "termux-monitor"
path = "src/termux/main.rs"
required-features = ["termux"]
