[package]
name = "system-monitor-installer"
version = "1.0.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["blocking", "json"] }
zip = "2.2"
anyhow = "1.0"
console = "0.15"
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_Shell",
    "Win32_System_Com",
    "Win32_UI_Shell_Common",
    "Win32_UI_WindowsAndMessaging"
]}

[profile.release]
opt-level = "z"
lto = true
strip = true
